--- a/Xin.Basic/Xin.Basic/Xin.Basic.csproj
+++ b/Xin.Basic/Xin.Basic/Xin.Basic.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataTableHelper.cs" />
+    <Compile Include="HttpHelper.cs" />
     <Compile Include="LogHelper.cs" />
     <Compile Include="MemoryCacheHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
