--- a/Xin.Basic/Xin.Basic/App.config
+++ b/Xin.Basic/Xin.Basic/App.config
@@ -3,4 +3,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=AQS;User ID=sa;Password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <appSettings>
+    <add key="MailHost" value="smtp.qq.com"/>
+    <add key="MailFrom" value="envqfws_qh@qq.com"/>
+    <add key="MailPassword" value="indcjwqifqqncjeh"/>
+  </appSettings>
 </configuration>
