--- a/Xin.Basic/Xin.Basic/App.config
+++ b/Xin.Basic/Xin.Basic/App.config
@@ -7,5 +7,6 @@
     <add key="MailHost" value="smtp.qq.com"/>
     <add key="MailFrom" value="envqfws_qh@qq.com"/>
     <add key="MailPassword" value="indcjwqifqqncjeh"/>
+    <add key="MailEnableSsl" value="true"/>
   </appSettings>
 </configuration>
