--- a/Xin.Basic/Xin.Basic/App.config
+++ b/Xin.Basic/Xin.Basic/App.config
@@ -5,7 +5,7 @@
   </connectionStrings>
   <appSettings>
     <add key="MailHost" value="smtp.qq.com"/>
-    <add key="MailFrom" value="envqfws_qh@qq.com"/>
+    <add key="MailUsername" value="envqfws_qh@qq.com"/>
     <add key="MailPassword" value="indcjwqifqqncjeh"/>
     <add key="MailEnableSsl" value="true"/>
   </appSettings>
