--- a/Xin.Basic/Xin.Basic/App.config
+++ b/Xin.Basic/Xin.Basic/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=AQS;User ID=sa;Password=123456" providerName="System.Data.SqlClient"/>
@@ -9,4 +9,4 @@
     <add key="MailPassword" value="indcjwqifqqncjeh"/>
     <add key="MailEnableSsl" value="true"/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
