--- a/Xin.Basic/Xin.Basic/App.config
+++ b/Xin.Basic/Xin.Basic/App.config
@@ -4,9 +4,8 @@
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=AQS;User ID=sa;Password=123456" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
-    <add key="MailHost" value="smtp.qq.com"/>
-    <add key="MailUsername" value="envqfws_qh@qq.com"/>
-    <add key="MailPassword" value="indcjwqifqqncjeh"/>
-    <add key="MailEnableSsl" value="true"/>
+    <add key="MailHost" value="smtp.126.com"/>
+    <add key="MailUsername" value="zzfxdhz@126.com"/>
+    <add key="MailPassword" value="ms5lmxin"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
