--- a/Xin.Basic/Xin.Basic/Xin.Basic.csproj
+++ b/Xin.Basic/Xin.Basic/Xin.Basic.csproj
@@ -55,6 +55,7 @@
     <Compile Include="HttpHelper.cs" />
     <Compile Include="LogHelper.cs" />
     <Compile Include="MemoryCacheHelper.cs" />
+    <Compile Include="PagingHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmtpHelper.cs" />
     <Compile Include="SqlHelper.cs" />
