--- a/Xin.Basic/Xin.Basic/App.config
+++ b/Xin.Basic/Xin.Basic/App.config
@@ -8,4 +8,7 @@
     <add key="MailUsername" value="zzfxdhz@126.com"/>
     <add key="MailPassword" value="ms5lmxin"/>
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
+</configuration>
