--- a/Xin.Basic/Xin.Basic/Xin.Basic.csproj
+++ b/Xin.Basic/Xin.Basic/Xin.Basic.csproj
@@ -65,21 +65,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cell.cs" />
     <Compile Include="DataTableHelper.cs" />
     <Compile Include="HttpHelper.cs" />
     <Compile Include="LogHelper.cs" />
     <Compile Include="MemoryCacheHelper.cs" />
     <Compile Include="NPOIHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Row.cs" />
     <Compile Include="SmtpHelper.cs" />
     <Compile Include="SqlHelper.cs" />
-    <Compile Include="Table.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="log4net.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Table\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
