--- a/Xin.Basic/Xin.Basic/log4net.config
+++ b/Xin.Basic/Xin.Basic/log4net.config
@@ -10,15 +10,32 @@
       <appendToFile value="true" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="10" />
-      <maximumFileSize value="10MB" />
+      <maximumFileSize value="1MB" />
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%n【时间】%date %n【级别】%-5level 线程[%thread] %n【出处】%F 行号[%L] %n【描述】%message %newline" />
+        <conversionPattern value="%n【时间】%date %n【级别】%-5level 线程[%thread] %n【出处】%F 行号[%L] %n【描述】%message %n" />
+      </layout>
+    </appender>
+    <appender name="SmtpAppender" type="log4net.Appender.SmtpAppender">
+      <authentication value="Basic" />
+      <to value="564030525@qq.com" />
+      <from value="zzfxdhz@126.com" />
+      <username value="zzfxdhz@126.com" />
+      <password value="ms5lmxin" />
+      <subject value="Error from log4net." />
+      <smtpHost value="smtp.126.com" />
+      <enableSsl value="true" />
+      <bufferSize value="1" />
+      <lossy value="false" />
+      <threshold value="ERROR"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%n【时间】%date %n【级别】%-5level 线程[%thread] %n【出处】%F 行号[%L] %n【描述】%message %n" />
       </layout>
     </appender>
     <root>
       <level value="Info" />
       <appender-ref ref="RollingFileAppender"></appender-ref>
+      <!--<appender-ref ref="SmtpAppender"></appender-ref>-->
     </root>
   </log4net>
 </configuration>
